Update 'faskx80ef-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:e3ca15e60fad912629563b3e169d669132fc643d@sha256:0da1cb92263766b620154eb007685b866131f9d3d31faeda08eee13d9cb5c41d

--- a/components/faskx80ef-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/faskx80ef-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: faskx80ef-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:e3ca15e60fad912629563b3e169d669132fc643d@sha256:0da1cb92263766b620154eb007685b866131f9d3d31faeda08eee13d9cb5c41d
+          name: container-image
